# lc-crash-course

./: CMakeLists.txt
arrays_and_strings/: CMakeLists.txt  answer_queries.cpp  answer_queries.java  answer_queries.js  answer_queries.py  check_for_target.cpp  check_for_target.java  check_for_target.js  check_for_target.py  check_if_palindrome.cpp  check_if_palindrome.java  check_if_palindrome.js  check_if_palindrome.py  combine.cpp  combine.java  combine.js  combine.py  find_best_subarray.cpp  find_best_subarray.java  find_best_subarray.js  find_best_subarray.py  find_length.cpp  find_length.java  find_length.js  find_length.py  find_length_of_binary_str.cpp  find_length_of_binary_str.java  find_length_of_binary_str.js  find_length_of_binary_str.py  is_subsequence.cpp  is_subsequence.java  is_subsequence.js  is_subsequence.py  k_radius_subarray_averages.cpp  k_radius_subarray_averages.java  k_radius_subarray_averages.js  k_radius_subarray_averages.py  max_consecutive_ones_3.cpp  max_consecutive_ones_3.java  max_consecutive_ones_3.js  (+33 more)
backtracking/: CMakeLists.txt  all_paths_from_source_to_target.cpp  all_paths_from_source_to_target.java  all_paths_from_source_to_target.js  all_paths_from_source_to_target.py  combination_sum.cpp  combination_sum.java  combination_sum.js  combination_sum.py  combination_sum_iii.cpp  combination_sum_iii.java  combination_sum_iii.js  combination_sum_iii.py  combinations.cpp  combinations.java  combinations.js  combinations.py  generate_parentheses.cpp  generate_parentheses.java  generate_parentheses.js  generate_parentheses.py  letter_combinations_of_a_phone_number.cpp  letter_combinations_of_a_phone_number.java  letter_combinations_of_a_phone_number.js  letter_combinations_of_a_phone_number.py  n_queens_ii.cpp  n_queens_ii.java  n_queens_ii.js  n_queens_ii.py  numbers_with_same_consecutive_differences.cpp  numbers_with_same_consecutive_differences.java  numbers_with_same_consecutive_differences.js  numbers_with_same_consecutive_differences.py  permutations.cpp  permutations.java  permutations.js  permutations.py  subsets.cpp  subsets.java  subsets.js  (+5 more)
binary_search/: CMakeLists.txt  binary_search.cpp  binary_search.java  binary_search.js  binary_search.py  binary_search_templates.cpp  binary_search_templates.java  binary_search_templates.js  binary_search_templates.py  divide_chocolate.cpp  divide_chocolate.java  divide_chocolate.js  divide_chocolate.py  find_the_smallest_divisor_given_a_threshold.cpp  find_the_smallest_divisor_given_a_threshold.java  find_the_smallest_divisor_given_a_threshold.js  find_the_smallest_divisor_given_a_threshold.py  koko_eating_bananas.cpp  koko_eating_bananas.java  koko_eating_bananas.js  koko_eating_bananas.py  longest_subsequence_with_limited_sum.cpp  longest_subsequence_with_limited_sum.java  longest_subsequence_with_limited_sum.js  longest_subsequence_with_limited_sum.py  minimum_speed_to_arrive_on_time.cpp  minimum_speed_to_arrive_on_time.java  minimum_speed_to_arrive_on_time.js  minimum_speed_to_arrive_on_time.py  path_with_minimum_effort.cpp  path_with_minimum_effort.java  path_with_minimum_effort.js  path_with_minimum_effort.py  search_a_2d_matrix.cpp  search_a_2d_matrix.java  search_a_2d_matrix.js  search_a_2d_matrix.py  search_input_position.cpp  search_input_position.java  search_input_position.js  (+9 more)
bonus/: CMakeLists.txt  brightest_position_on_street.cpp  brightest_position_on_street.java  brightest_position_on_street.js  brightest_position_on_street.py  build_trie.cpp  build_trie.java  build_trie.js  build_trie.py  car_pooling.cpp  car_pooling.java  car_pooling.js  car_pooling.py  cheapest_flights_within_k_stops.cpp  cheapest_flights_within_k_stops.java  cheapest_flights_within_k_stops.js  cheapest_flights_within_k_stops.py  find_the_divisibility_array_of_a_string.cpp  find_the_divisibility_array_of_a_string.java  find_the_divisibility_array_of_a_string.js  find_the_divisibility_array_of_a_string.py  hamming_distance.cpp  hamming_distance.java  hamming_distance.js  hamming_distance.py  implement_trie.cpp  implement_trie.java  implement_trie.js  implement_trie.py  insert_interval.cpp  insert_interval.java  insert_interval.js  insert_interval.py  maximum_product_after_k_increments.cpp  maximum_product_after_k_increments.java  maximum_product_after_k_increments.py  meeting_rooms.cpp  meeting_rooms.java  meeting_rooms.js  meeting_rooms.py  (+20 more)
dynamic_programming/: CMakeLists.txt  best_time_to_buy_and_sell_stock_iv.cpp  best_time_to_buy_and_sell_stock_iv.java  best_time_to_buy_and_sell_stock_iv.js  best_time_to_buy_and_sell_stock_iv.py  best_time_to_buy_and_sell_stock_with_cooldown.cpp  best_time_to_buy_and_sell_stock_with_cooldown.java  best_time_to_buy_and_sell_stock_with_cooldown.js  best_time_to_buy_and_sell_stock_with_cooldown.py  best_time_to_buy_and_sell_stock_with_tx_fee.cpp  best_time_to_buy_and_sell_stock_with_tx_fee.java  best_time_to_buy_and_sell_stock_with_tx_fee.js  best_time_to_buy_and_sell_stock_with_tx_fee.py  climbing_stairs.cpp  climbing_stairs.java  climbing_stairs.js  climbing_stairs.py  coin_change.cpp  coin_change.java  coin_change.js  coin_change.py  fibonacci_number.cpp  fibonacci_number.java  fibonacci_number.js  fibonacci_number.py  house_robber.cpp  house_robber.java  house_robber.js  house_robber.py  longest_common_subsequence.cpp  longest_common_subsequence.java  longest_common_subsequence.js  longest_common_subsequence.py  longest_increasing_subsequence.cpp  longest_increasing_subsequence.java  longest_increasing_subsequence.js  longest_increasing_subsequence.py  maximum_value_of_k_coins_from_piles.cpp  maximum_value_of_k_coins_from_piles.java  maximum_value_of_k_coins_from_piles.js  (+25 more)
greedy/: CMakeLists.txt  boats_to_save_people.cpp  boats_to_save_people.java  boats_to_save_people.js  boats_to_save_people.py  destroying_asteroids.cpp  destroying_asteroids.java  destroying_asteroids.js  destroying_asteroids.py  how_many_apples_can_you_put_into_the_basket.cpp  how_many_apples_can_you_put_into_the_basket.java  how_many_apples_can_you_put_into_the_basket.js  ipo.cpp  ipo.java  ipo.py  (+21 more)
(+404 files in other folders)
